changing the order method

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -83,186 +83,111 @@
 
   <div id="main-content" class="container">
     <h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
+    <a href="order.html">
+      <div class="btn-order">
+        <div class="order-header">Order Now</div>
+      </div>
+    </a>
     <!--<div class="text-center">
       Substituting white rice with brown rice or fried rice after 3:00pm will be $1.50 for a pint and $2.50 for a quart.
     </div>-->
 
     <section class="row">
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>Milk Tea (&#8377;10)</span>
-          </button>
-          <!-- <div class="dropdown-content">
-            <a href="milkorder.html" ><b>Order</b></a>
-          </div> -->
-        </div>
+          </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>Cake (&#8377;10)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="cakeorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>donut (&#8377;10)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="donutorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>veg pop(&#8377;10)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="popjhurorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>paratha(&#8377;10)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="parathaorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>allu paratha(&#8377;10)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="alluparathaorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>pakowre(&#8377;5)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="pakowreorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>nemke(&#8377;5)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="nemkeorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>momo(&#8377;10/5)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="momoorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>soup momo(&#8377;40)</span>
-          </button>
-          <!-- <div class="dropdown-content">
-            <a href="soupmomoorder.html" ><b>Order</b></a>
-          </div> -->
-        </div>
+          </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>chicken chow(&#8377;90)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="chickenchaworder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>pork chow(&#8377;80)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="porkchaworder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>chicken soup chow(&#8377;90)</span>
-          </button>
-          <!-- <div class="dropdown-content">
-            <a href="chickensoupchaworder.html" ><b>Order</b></a>
-          </div> -->
-        </div>
+          </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>pork soup chow(&#8377;80)</span>
-          </button>
-         <!--  <div class="dropdown-content">
-            <a href="porksoupchaworder.html" ><b>Order</b></a>
-          </div> -->
-        </div>
+          </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>chicken roll(&#8377;40)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="chickenrollorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-        <div class="dropdown">
-          <button class="category-tile">
+          <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>egg roll(&#8377;20)</span>
-          </button>
-          <div class="dropdown-content">
-            <a href="eggrollorder.html" ><b>Order</b></a>
           </div>
-        </div>
       </div>
       </section>
 
