--- a/menu-categories.html
+++ b/menu-categories.html
@@ -85,7 +85,7 @@
     <h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
     <a href="order.html">
       <div class="btn-order">
-        <div class="order-header">Order Now</div>
+        <div class="order-header">Order</div>
       </div>
     </a>
     <!--<div class="text-center">
