changing the order button

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -83,11 +83,14 @@
 
   <div id="main-content" class="container">
     <h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
-    <a href="order.html">
-      <div class="btn-order">
-        <div class="order-header">Order</div>
+      <div id="btn-order" class="text-center">
+         <button class="btn-color">
+          <a href="order.html">
+           <span class="glyphicon glyphicon-flash"></span>
+           <span class="order-header"><b>ORDER NOW</b></span>
+           </a>
+        </button>
       </div>
-    </a>
     <!--<div class="text-center">
       Substituting white rice with brown rice or fried rice after 3:00pm will be $1.50 for a pint and $2.50 for a quart.
     </div>-->
