change the menu

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -82,7 +82,7 @@
   </div>
 
   <div id="main-content" class="container">
-    <h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
+    <h2 id="menu-categories-title" class="text-center">MENU</h2>
       <div id="btn-order" class="text-center">
          <button class="btn-color">
           <a href="order.html">
