put and alert on the home screen

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
   </a>
   </div>
 
-
+  <div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <strong>Order avialable</strong> in Moowsyiem only. We will inform you when order is available for area within 3-4 kilometer (i.e. within Shangpung).
+</div>
 
   <div id="main-content" class="container">
     <div class="jumbotron">
