add an image to the menu

--- a/menu-categories.html
+++ b/menu-categories.html
@@ -104,13 +104,13 @@
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
            <div class="category-tile">
-            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="Menu_images/d2.png" alt="Lunch">
             <span>Cake (&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
-            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="Menu_images/g.png" alt="Lunch">
             <span>donut (&#8377;10)</span>
           </div>
       </div>
@@ -122,25 +122,25 @@
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
-            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="Menu_images/h1.png" alt="Lunch">
             <span>paratha(&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
-            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="Menu_images/f.png" alt="Lunch">
             <span>allu paratha(&#8377;10)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
-            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="Menu_images/a.png" alt="Lunch">
             <span>pakowre(&#8377;5)</span>
           </div>
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
-            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="Menu_images/b.png" alt="Lunch">
             <span>nemke(&#8377;5)</span>
           </div>
       </div>
@@ -182,7 +182,7 @@
       </div>
       <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
           <div class="category-tile">
-            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="Menu_images/c.png" alt="Lunch">
             <span>chicken roll(&#8377;40)</span>
           </div>
       </div>
