a little change with the order form

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
       <p>We feel so glad that we can do this because of the pendemic. During this time we are taking a lot of risk opening our resturant yet we still open it because this is our only source of income but with the help of this website we hope that we can close our resturant and start serving our costumer by delivering the food to there home. Just like everyone we are also concern of our safety and yours as well. We hope that you are in good health. Stay healthy!</p>
       <p>Mrs&nbsp;Lutmonki&nbsp;Langbang is the owner of the restaurant. Through the restaurant she has support her family for many years, and also you who have decided to eat at this resturant or order from this resturant, you have support her family too. Therefore, thankyou for choosing this resturant.</p>
       <p>We did not hire a chef,so, Mrs&nbsp;Lutmonki&nbsp;Langbang and her son Sambor&nbsp;Langbang cook the food.</p>
-      <p>Please rate our resturant and leaves a review on google map it will help us alot and others who discover our resturant through the internet.</p>
+      <p>Please rate our resturant and leaves a review on google map it will help us alot and others who discover our resturant through the internet as well.</p>
       <p>Thank you.</p>
       
     </div>
